tests/negative/comptime_compound_division_by_zero.ora
contract ComptimeCompoundDivisionByZero {
    pub fn run() -> u256 {
        return comptime {
            var value: u256 = 4;
            value /= 0;
            value;
        };
    }
}
